[gd_scene load_steps=3 format=2]

[ext_resource path="res://shared/combat/HurtBox.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="HurtBox" type="Area2D"]
script = ExtResource( 1 )

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
